--- a/RPG-API/appsettings.json
+++ b/RPG-API/appsettings.json
@@ -1,13 +1,20 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        //Database cloud
-        "ShouraiDB": "Data Source=160.30.112.159,1434;User ID=sa;Password=domaybiet1A@;Database=ShouraiDB;Trusted_Connection=False;TrustServerCertificate=True"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //Database cloud
+    "ShouraiDB": "Data Source=160.30.112.159,1434;User ID=sa;Password=domaybiet1A@;Database=ShouraiDB;Trusted_Connection=False;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJwt123456789!!",
+    "Issuer": "RPG-API",
+    "Audience": "UnityGameClient",
+    "TokenExpirationInMinutes": 120
+  }
 }
+
